--- a/services/intelligence/dockerfile
+++ b/services/intelligence/dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
+    build-essential \
     postgresql-client \
     && rm -rf /var/lib/apt/lists/*
 
