Refactor: Rebrand Hearth to Kin OS, add Nginx architecture

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
-﻿# Hearth OS Configuration
+﻿# Kin OS - Configuration Template
+# This file is for reference only.
+# The install.sh script will generate the real .env file automatically.
 
-DB_PASSWORD=CHANGE_THIS
-SYNAPSE_ADMIN_TOKEN=GENERATE_WITH_openssl_rand_hex_32
-HEARTH_DOMAIN=family.hearth.local
-PI_IP=192.168.1.100
+KIN_DOMAIN=family.ourkin.app
+DB_NAME=kin_core
+DB_USER=kin_user
+DB_PASSWORD=automatically_generated_on_install
+SYNAPSE_ADMIN_TOKEN=automatically_generated_on_install
+ENABLE_REGISTRATION=true
+TZ=Europe/London
