feat: Rebrand to Memu OS, add initial bootstrap wizard, intelligence service, and core system infrastructure.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-﻿# Kin OS - Configuration Template
+﻿# Memu OS - Configuration Template
 # This file is for reference only.
 # The install.sh script will generate the real .env file automatically.
 
-KIN_DOMAIN=family.ourkin.app
-DB_NAME=kin_core
-DB_USER=kin_user
+MEMU_DOMAIN=family.memu.digital
+DB_NAME=memu_core
+DB_USER=memu_user
 DB_PASSWORD=automatically_generated_on_install
 SYNAPSE_ADMIN_TOKEN=automatically_generated_on_install
 ENABLE_REGISTRATION=true
