--- a/systemd/memu-production.service
+++ b/systemd/memu-production.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=Kin OS Main Application
+Description=Memu OS Main Application
 Requires=docker.service
 After=docker.service
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-WorkingDirectory=/home/hareesh/kin-os
+WorkingDirectory=/home/hareesh/memu-os
 ExecStart=/usr/bin/docker compose up -d
 ExecStop=/usr/bin/docker compose down
 
