feat: Add Memu OS product bible, new intelligence service, Synapse and database configurations, and rebranding utilities.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,12 +1,12 @@
-services:
+﻿services:
   intelligence:
     build:
       context: ./services/intelligence
       dockerfile: dockerfile
-    container_name: hearth_intelligence
+    container_name: Memu_intelligence
     restart: unless-stopped
     networks:
-      - hearth
+      - Memu
     environment:
       - DB_HOST=postgres
       - DB_PORT=5432
