--- a/synapse/homeserver.yaml
+++ b/synapse/homeserver.yaml
@@ -1,4 +1,4 @@
-# Configuration file for Synapse.
+﻿# Configuration file for Synapse.
 #
 # This is a YAML file: see [1] for a quick introduction. Note in particular
 # that *indentation is important*: all the elements of a list or dictionary
@@ -9,7 +9,7 @@
 # For more information on how to configure Synapse, including a complete accounting of
 # each option, go to docs/usage/configuration/config_documentation.md or
 # https://element-hq.github.io/synapse/latest/usage/configuration/config_documentation.html
-server_name: "hearth.local"
+server_name: "memu.local"
 pid_file: /data/homeserver.pid
 listeners:
   - port: 8008
@@ -23,13 +23,13 @@ database:
   name: sqlite3
   args:
     database: /data/homeserver.db
-log_config: "/data/hearth.local.log.config"
+log_config: "/data/memu.local.log.config"
 media_store_path: /data/media_store
 registration_shared_secret: "cUzOf;GELqBfK#mvG*Zb=~K+UsPzE2*qKWc3Yk,#vut=Sc;2*S"
 report_stats: false
 macaroon_secret_key: "z2WX7TNKJzKJey1la=Nu,QhuW0MgvC6uR2TJQKj=kqKpM0iPH-"
 form_secret: ".aMIe4trRB5QuVu-y2icbISGy&I7bc,~3.QRCevYg26nE2Z5KL"
-signing_key_path: "/data/hearth.local.signing.key"
+signing_key_path: "/data/memu.local.signing.key"
 trusted_key_servers:
   - server_name: "matrix.org"
 
@@ -38,9 +38,9 @@ trusted_key_servers:
 database:
   name: psycopg2
   args:
-    user: hearth
+    user: Memu
     password: dummy_password
-    database: hearth
+    database: Memu
     host: postgres
     port: 5432
     cp_min: 5
