--- a/systemd/memu-production.service
+++ b/systemd/memu-production.service
@@ -1,4 +1,4 @@
-[Unit]
+﻿[Unit]
 Description=Memu OS Main Application
 Requires=docker.service
 After=docker.service
@@ -6,7 +6,7 @@ After=docker.service
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-WorkingDirectory=/home/hareesh/memu-os
+WorMemugDirectory=/home/hareesh/memu-os
 ExecStart=/usr/bin/docker compose up -d
 ExecStop=/usr/bin/docker compose down
 
