--- a/systemd/memu-setup.service
+++ b/systemd/memu-setup.service
@@ -1,10 +1,10 @@
-[Unit]
+﻿[Unit]
 Description=Memu OS Setup Wizard
 After=network.target
 
 [Service]
 User=root
-WorkingDirectory=/home/hareesh/memu-os/bootstrap
+WorMemugDirectory=/home/hareesh/memu-os/bootstrap
 ExecStart=/usr/bin/python3 app.py
 Restart=always
 
