feat: Add Immich, Ollama, and Cloudflared services, refactor docker-compose, and introduce a product specification.

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,42 @@
-﻿# Memu OS - Configuration Template
-# This file is for reference only.
-# The install.sh script will generate the real .env file automatically.
+﻿# ==========================================
+# MEMU SUITE - ENVIRONMENT CONFIGURATION
+# ==========================================
 
-MEMU_DOMAIN=family.memu.digital
-DB_NAME=memu_core
-DB_USER=memu_user
-DB_PASSWORD=automatically_generated_on_install
-SYNAPSE_ADMIN_TOKEN=automatically_generated_on_install
-ENABLE_REGISTRATION=true
-TZ=Europe/London
+# --- GENERAL CONFIGURATION ---
+# The hostname for your Memu Hub.
+# If using Cloudflare Tunnel, this is your public domain (e.g., chat.memu.digital)
+# If local only, use 'memu.local'
+SERVER_NAME=memu.local
+
+# Timezone for logs and scheduling
+TZ=Etc/UTC
+
+# --- DATABASE CREDENTIALS ---
+# Shared database user/pass for both Chat and Photos
+# You can generate a secure password with: openssl rand -base64 32
+DB_USER=memu
+DB_PASSWORD=change_this_to_a_secure_password
+
+# --- PHOTOS (IMMICH) CONFIGURATION ---
+# CRITICAL: Where should photos be stored on the Pi?
+# If using an NVMe drive mounted at /media/nvme, point this there.
+# Default: ./photos (creates a folder in the current directory)
+UPLOAD_LOCATION=./photos
+
+# Immich Version (keep pinned to release for stability)
+IMMICH_VERSION=release
+
+# --- CHAT (MATRIX/SYNAPSE) CONFIGURATION ---
+# (Most chat config is in homeserver.yaml, but env vars can override here)
+SYNAPSE_REPORT_STATS=no
+
+# --- NETWORKING (CLOUDFLARED) ---
+# The token provided by Cloudflare Zero Trust dashboard when creating a tunnel.
+# If this is empty, the tunnel container will not start correctly.
+CLOUDFLARED_TOKEN=
+
+# --- SAFETY & AI (HAILO KIT) ---
+# Number of workers for the ML engine. 
+# Keep at 1 for Raspberry Pi 5 to prevent overheating/RAM exhaustion.
+MACHINE_LEARNING_WORKERS=1
+MACHINE_LEARNING_WORKER_TIMEOUT=120
