--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,12 @@ services:
   # extension required for AI search. Synapse works fine with this version too.
   database:
     container_name: memu_postgres
-    image: ghcr.io/immich-app/immich-postgres:release
+    image: public.ecr.aws/docker/library/postgres:15-alpine
     restart: always
+    networks:
+      default:
+        aliases:
+          - postgres
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USER}
@@ -27,13 +31,12 @@ services:
 
   redis:
     container_name: memu_redis
-    image: redis:6.2-alpine@sha256:70a7a5b66d949b569cd5f54e6cfdffe9952125023a01741983c48b2074e50337
+    image: public.ecr.aws/docker/library/redis:6.2-alpine
     restart: always
     healthcheck:
       test: [ "CMD-SHELL", "redis-cli ping || exit 1" ]
     volumes:
       - redisdata:/data
-
   # ---------------------------------------------------------------------------
   # CHAT MODULE (Matrix/Synapse + Element)
   # ---------------------------------------------------------------------------
@@ -61,12 +64,12 @@ services:
       - ./element-config.json:/app/config.json
       # NEW: Map the local assets folder so the browser can load the logo
       - ./assets:/app/assets
-    ports:
-      - "80:80"
+    # ports:
+    #   - "80:80"
 
-  # ---------------------------------------------------------------------------
-  # PHOTOS MODULE (Immich)
-  # ---------------------------------------------------------------------------
+    # ---------------------------------------------------------------------------
+    # PHOTOS MODULE (Immich)
+    # ---------------------------------------------------------------------------
 
   immich-server:
     container_name: memu_photos_server
