feat: introduce intelligence service for message processing, memory, and list management, configuring Matrix environment variables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -189,6 +189,8 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - OLLAMA_HOST=http://ollama:11434
       - AI_ENABLED=true
+      - MATRIX_HOMESERVER_URL=http://synapse:8008
+      - MATRIX_BOT_TOKEN=syt_bWVtdV9ib3Q_LNACvTYNtEHsphZcrctE_4FSBHH
     depends_on:
       - database
       - ollama
